11/10/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.2 'Marshal West':
	- TLS connection procedure improved in uclient test program.
	- Reliability improvements (Issue 141).

11/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.5.1 'Marshal West':
	- Request re-transmission implemented in uclient test program.
	- TLS connection procedure improved in uclient test program.

10/31/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.6 'Marshal West':
	- Relay RTCP sockets ports allocation fixed.
	- SSL renegotiation callback fixed.
	- List of libraries cleaned.
	- Debian UFW file added to the Debian package.

10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.5 'Marshal West':
	- Mobile sessions authentication improved.
	- Authentication code cleaning.
	- Quota allocation fixed.
	- Core dump fixed.
	- Memory code cleaning.
	- Logging code cleaning.
	- TCP/TLS tests improved.
	- relay RTCP sockets ports allocation fixed.
	
09/05/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.4 'Marshal West':
	- TLS renegotiation DoS attack prevention implemented (Issue 136);
	- FQDN is allowed as a relay-ip or a listener-ip parameter
	(patch provided by Iñaki Baz Castillo).
	
09/01/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.3 'Marshal West':
	- Redis DB user key database operation fixed.
	- SHA-256 memory leak fixed.
	- Mobility ticket retransmission fixed.
	
08/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.2 'Marshal West':
	- MySQL SSL connection support.
	- Crash fixed when incorrect DB connection string.
	- Minor docs fixes.
	
07/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.4.1 'Marshal West':
	- Server-side forceful session cancellation implemented
	(in telnet console).
	
07/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.96 'Marshal West':
	- TCP 6062 relay connection fix.
	- "pu" CLI command fixed.
	- Some crash conditions fixed.
	
07/11/2014 Oleg Moskalenko <mom040267@gmail.com>